--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.example::-webkit-scrollbar {
+  display: none;
+}
+
 @keyframes bgcolor {
   0% {
       background-color: #45a3e5
@@ -21,7 +25,7 @@
 }
 
 .bg-change {
-  -webkit-animation: bgcolor 20s infinite;
+  -webkit-animation: bgcolor 20s infinite ;
   animation: bgcolor 10s infinite;
   -webkit-animation-direction: alternate;
   animation-direction: alternate;
