--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@
   }
 }
 
+.background-image {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 .bg-change {
   -webkit-animation: bgcolor 20s infinite ;
   animation: bgcolor 10s infinite;
