--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+ol,
+ul {
+    margin: 0;
+    padding-left: 40px !important;
+}
+
+pre,
+code,
+samp {
+    font-family: monospace !important;
+    font-size: 1em !important;
+    background-color: black !important;
+    color: greenyellow !important;
+    border-radius: 5px !important;
+    overflow-x: auto !important;
+    padding: 4px !important;
+    max-width: fit-content !important;
+}
+
 .example::-webkit-scrollbar {
     display: none;
 }
