--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,10 @@ ul {
     padding-left: 40px !important;
 }
 
+h1 {
+    font-size: 20px !important;
+    line-height: 1.5;
+}
 /* pre,
 code,
 samp {
