--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,6 +17,11 @@ samp {
   min-width: 100px;
 }
 
+hr {
+  border-top-width: 2px !important;
+  margin-top: 10px !important;
+}
+
 blockquote {
   color: #666;
   font-style: italic;
